[tool.poetry]
name = "zombie_survivor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.9.5"
decorator = "^5.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-watch = "^4.2.0"
black = "^22.3.0"
pylint = "^2.13.9"
mypy = "^0.971"
pylint-pytest = "^1.1.2"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.pylint.format]
max-line-length = 88

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 88
